Added error handling of wrong location input

--- a/Backend/weatherApp/index/templates/index/index.html
+++ b/Backend/weatherApp/index/templates/index/index.html
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="col-5 text-center align-self-center">
-                            <img id="weather_image" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto">  
+                            <img id="weather_image" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto">  
                         </div>
                     </div>
                 </div>
@@ -52,11 +52,11 @@
 
                     <!-- Display condition -->
                     <div class="row align-items-center" style="height: 33%;">
-                        <div class="col"><img id="hour1_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="hour2_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="hour3_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="hour4_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="hour5_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour1_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour2_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour3_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour4_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour5_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
                     </div>
 
                     <!-- Display time -->
@@ -82,11 +82,11 @@
 
                     <!-- Display condition -->
                     <div class="row align-items-center" style="height: 33%;">
-                        <div class="col"><img id="day0_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="day1_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="day2_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="day3_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
-                        <div class="col"><img id="day4_cond" src="{% static 'images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day0_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day1_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day2_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day3_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day4_cond" src="{% static 'index/images/sunny.png' %}" class="img-fluid mx-auto hour_image"></div>
                     </div>
 
                     <!-- Display time -->
